Nuevo post + atom.xml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,10 @@
            rel="stylesheet" type="text/css">
      <link rel="stylesheet" href="/css/main.css">
 
+     <link href="http://pauek.info/atom.xml" rel="alternate"
+           title="Pau Fernández"
+           type="application/atom+xml">
+
      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
    </head>
 <body>
