--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
+@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro);
 html, body {
   height: 100%;
   font-family: "Open Sans", sans-serif;
@@ -24,6 +25,12 @@ h2 {
 p {
   margin: 0 0 .7em 1.5em;
   max-width: 38em;
+}
+pre {
+  padding-left: 2em;
+}
+pre code {
+  font-family: "Source Code Pro", Consolas, Monaco, monospace;
 }
 .details {
   display: none;
