--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,9 @@
            rel="stylesheet" type="text/css">
      <link rel="stylesheet" href="/css/main.css">
 
-     <link href="http://pauek.info/atom.xml" rel="alternate"
-           title="Pau Fernández"
+     <link href="http://feeds.feedburner.com/pauek" 
+           rel="alternate"
+           title="Pau Fernández" 
            type="application/atom+xml">
 
      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
