Separo un poco el post de los comentarios

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,9 @@ ul.nobullet li {
   margin-bottom: .2em;
   margin-left: 1em;
 }
-
+#post {
+  margin-bottom: 3em;
+}
 #post h1 {
   margin-bottom: 0;
 }
