Añado SymbolSet Social + retoques

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
      <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600" 
            rel="stylesheet" type="text/css">
      <link rel="stylesheet" href="/css/main.css">
+     <link href="/webfonts/ss-social.css" rel="stylesheet" />
+
 
      <link href="http://feeds.feedburner.com/pauek" 
            rel="alternate"
@@ -21,18 +23,15 @@
 <body>
 
 <header>
-  <a href="/">PAU FERNÁNDEZ</a>
+  <a href="/">Pau Fernández</a>
+  <div class="social">
+    <a href="http://twitter.com/pauek" class="twitter-icon icon ss-social-circle ss-twitter"></a>
+    <a href="http://gplus.to/pauek" class="googleplus-icon icon ss-social-circle ss-googleplus"></a>
+    <a href="http://github.com/pauek" class="github-icon icon ss-social-circle ss-octocat"></a>
+  </div>
 </header>
 
 {{ content }}
-
-<footer>
-  <table>
-    <tr><td>Twitter</td><td><a href="http://twitter.com/pauek">@pauek</a></td></tr>
-    <tr><td>Google+&nbsp;</td><td><a href="http://gplus.to/pauek">+Pau Fernández</a></td></tr>
-    <tr><td>GitHub</td><td><a href="http://github.com/pauek">github.com/pauek</a></td></tr>
-  </table>
-</footer>
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
