--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,13 @@
 layout: default
 ---
 
-<div id="post">
-  {{ content }}
+<div id="content">
+  <div id="post">
+    {{ content }}
+  </div>
+  <div id="disqus_thread"></div>
 </div>
 
-<div id="disqus_thread"></div>
 <script type="text/javascript">
   var disqus_shortname = 'pauek'; // required: replace example with your forum shortname
   (function() {
