Actualizo más cosas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 <body>
 
 <header>
+  <img id="face" src="/img/pauek.jpg" />
   <a href="/">Pau Fernández</a>
   <div class="social">
     <a href="http://youtube.com/paueky" class="youtube-icon icon ss-social-circle ss-youtube"></a>
