--- a/css/main.css
+++ b/css/main.css
@@ -12,22 +12,26 @@ body {
   max-width: 38em;
 }
 a {
-  color: #4b5e83;
+  color: #2353b3;
   text-decoration: none;
 }
 a:hover {
-  color: #29303d;
+  color: #002364;
 }
 h2 {
   font-family: "Open Sans Condensed", sans-serif;
   font-weight: 700;
   color: #1f1d19;
   font-size: 1.4em;
-  margin: .8em 0 .5em;
+  margin: 1.2em 0 .25em;
 }
 p {
   margin: 0 0 .7em 0;
   max-width: 38em;
+}
+span.role {
+  font-style: italic;
+  border-bottom: 1px solid rgb(206, 206, 206);
 }
 pre {
   padding-left: 2em;
@@ -127,8 +131,17 @@ header {
   font-weight: 300;
   font-size: 1.4em;
   margin: 1.5rem 1rem;
-  padding-bottom: .25em;
-  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: .4em;
+  padding-left: 52px;
+  border-bottom: 2px solid #f0f0f0;
+}
+#face {
+  position: absolute;
+  left: 0;
+  top: -5px;
+  width: 44px;
+  height: 44px;
+  border-radius: 25px;
 }
 .social {
   position: absolute;
@@ -141,9 +154,9 @@ header {
   margin-bottom: -.2em;
 }
 
-header a       { color: #b0b0b0; }
-header a:hover { color: #404040; }
-header .social a       { color: #d0d0d0; }
+header a       { color: #5f5f5f; }
+header a:hover { color: #2c2c2c; }
+header .social a       { color: #b3b3b3; }
 header .social a:hover { color: #606060; }
 
 footer {
