Retoco las fuentes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,32 +3,36 @@
    <head>
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
      <meta name="viewport" content="width=device-width">
-     <title>{{ page.title }}</title>
-     <meta name="description" content="Profesor en la UPC, Programador, Creador de minidosis.org">
-     <meta name="author" content="Pau Fernández">
 
-     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600" 
-           rel="stylesheet" type="text/css">
+     <title>{{ page.title }}</title>
+
+     <meta name="author" content="Pau Fernández">
+     <meta name="description" content="Profesor en la UPC, Programador, Creador de minidosis.org">
+
+
+     <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Source+Sans+Pro&display=swap" rel="stylesheet">
+
      <link rel="stylesheet" href="/css/main.css">
      <link href="/webfonts/ss-social.css" rel="stylesheet" />
 
 
-     <link href="http://feeds.feedburner.com/pauek" 
+     <link href="https://feeds.feedburner.com/pauek" 
            rel="alternate"
            title="Pau Fernández" 
            type="application/atom+xml">
 
-     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
    </head>
 <body>
 
 <header>
-  <img id="face" src="/img/pauek.jpg" />
+  <a href="/"><img id="face" src="/img/pauek.jpg" /></a>
   <a href="/">Pau Fernández</a>
   <div class="social">
-    <a href="http://youtube.com/paueky" class="youtube-icon icon ss-social-circle ss-youtube"></a>
-    <a href="http://twitter.com/pauek" class="twitter-icon icon ss-social-circle ss-twitter"></a>
-    <a href="http://github.com/pauek" class="github-icon icon ss-social-circle ss-octocat"></a>
+    <a href="https://youtube.com/paueky" class="youtube-icon icon ss-social-circle ss-youtube"></a>
+    <a href="https://twitter.com/pauek" class="twitter-icon icon ss-social-circle ss-twitter"></a>
+    <a href="https://github.com/pauek" class="github-icon icon ss-social-circle ss-octocat"></a>
+    <a href="https://www.linkedin.com/in/pau-fern%C3%A1ndez-5b7688aa/" class="linkedin-icon icon ss-social-circle ss-linkedin"></a>
   </div>
 </header>
 
