--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
-@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro);
-
 html, body {
   height: 100%;
-  font-family: "Open Sans", sans-serif;
-  font-size: 0.98em;
+  font-family: "EB Garamond", serif;
+  font-size: 16pt;
+  background: #fbfbfa;
 }
 body {
   margin: auto;
-  max-width: 38em;
+  max-width: 32em;
 }
 a {
   color: #2353b3;
@@ -18,11 +15,13 @@ a {
 a:hover {
   color: #002364;
 }
-h2 {
-  font-family: "Open Sans Condensed", sans-serif;
+h1, h2 {
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 700;
-  color: #1f1d19;
-  font-size: 1.4em;
+}
+h2 {
+  color: #555350;
+  font-size: 1.25em;
   margin: 1.2em 0 .25em;
 }
 p {
@@ -30,14 +29,15 @@ p {
   max-width: 38em;
 }
 span.role {
-  font-style: italic;
-  border-bottom: 1px solid rgb(206, 206, 206);
+  /* font-style: italic; */
+  border-bottom: 2px dotted rgb(190, 188, 184);
 }
 pre {
   padding-left: 2em;
 }
 pre code {
-  font-family: "Source Code Pro", Consolas, Monaco, monospace;
+  font-size: .8em;
+  font-family: monospace;
 }
 #content {
   margin: 0 1rem;
@@ -68,7 +68,7 @@ pre code {
 }
 .year { width: 2.2rem; margin-left: -2.2rem; }
 .date { 
-    margin-right: .7rem;
+  margin-right: .7rem;
 }
 
 .details {
@@ -96,6 +96,7 @@ ul.nobullet li {
   margin-left: 1em;
 }
 #post {
+  font-size: 110%;
   margin-bottom: 3em;
   color: #2c2a25;
 }
@@ -117,6 +118,11 @@ ul.nobullet li {
 }
 .posts td {
   vertical-align: top;
+  height: 1.2em;
+  padding-bottom: .4em;
+}
+.post-title {
+  font-family: "Source Sans Pro";
 }
 
 time {
@@ -124,38 +130,40 @@ time {
   font-size: .8em;
 }
 
-header {
-  position: relative;
-  font-weight: 300;
-  font-size: 1.4em;
-  margin: 1.5rem 1rem;
-  padding-bottom: .4em;
-  padding-left: 52px;
-  border-bottom: 2px solid #f0f0f0;
-}
-#face {
-  position: absolute;
-  left: 0;
-  top: -5px;
-  width: 44px;
-  height: 44px;
-  border-radius: 25px;
-}
+
 .social {
   position: absolute;
-  top: .15rem;
+  top: .35rem;
   margin-left: .5em;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   display: inline-block;
 }
 .social a {
   margin-bottom: -.2em;
 }
 
-header a       { color: #5f5f5f; }
+header {
+  position: relative;
+  font-family: "Source Sans Pro";
+  font-weight: 300;
+  font-size: 1.6em;
+  margin: 1.5rem 1rem;
+  padding-bottom: .1em;
+  padding-left: 60px;
+  border-bottom: 2px solid #f0f0f0;
+}
+header a       { color: #949494; }
 header a:hover { color: #2c2c2c; }
 header .social a       { color: #b3b3b3; }
 header .social a:hover { color: #606060; }
+#face {
+  position: absolute;
+  left: 0;
+  top: -2px;
+  width: 48px;
+  height: 48px;
+  border-radius: 25px;
+}
 
 footer {
   color: #555;
