--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,10 @@
 <body>
 
 <header>
-  <a href="/"><img id="face" src="/img/pauek.jpg" /></a>
-  <a href="/">Pau Fernández</a>
+  <div class="whoami">
+    <a href="/"><img id="face" src="/img/pauek.jpg" /></a>
+    <a href="/">Pau Fernández</a>
+  </div>
   <div class="social">
     <a href="https://youtube.com/paueky" class="youtube-icon icon ss-social-circle ss-youtube"></a>
     <a href="https://twitter.com/pauek" class="twitter-icon icon ss-social-circle ss-twitter"></a>
