Mejoro el CSS con media queries

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
 <header>
   <div class="whoami">
-    <a href="/"><img id="face" src="/img/pauek.jpg" /></a>
+    <a href="/"><img src="/img/pauek.jpg" /></a>
     <a href="/">Pau Fernández</a>
   </div>
   <div class="social">
